Changing Docker image name

--- a/Create_Image.yaml
+++ b/Create_Image.yaml
@@ -3,7 +3,7 @@
   hosts: localhost
   tasks:
    - name: Create Image
-     command: docker build -t kedar1906/AddressBook .
+     command: docker build -t kedar1906/addressbook .
    - name: Push Image
-     command: docker push kedar1906/Addressbook
+     command: docker push kedar1906/addressbook
   
